# onlinestore

./: .env-test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django-test.yml
apps/: pyproject.toml
apps/autofleamarket/: apps.py
apps/frontend/: urls.py  views.py
apps/info/: tasks.py  urls.py
apps/orders/: urls.py
apps/store/: admin.py  apps.py  permissions.py  urls.py
apps/users/: admin.py  forms.py  permissions.py  signals.py  urls.py
apps/vendors/: urls.py
apps/wallet/: admin.py
autofleamarket/: apps.py
autofleamarket/migrations/: 0001_initial.py  0002_offerauto_cost_offerauto_create_date.py
autofleamarket/models/: __init__.py  auto_brand.py  offer.py
core/: asgi.py  celery.py  settings.py  settings_local.py  urls.py  wsgi.py
core/base/: model.py
forum/models/: topic.py
frontend/: urls.py  views.py
frontend/templates/: index.html
info/migrations/: 0001_initial.py  0002_alter_exchangecurrency_options.py  0003_covid.py  0004_rename_death_covid_deaths.py  0005_alter_covid_options.py
info/models/: __init__.py  covid.py  currency.py
info/serializers/: __init__.py  covid.py  currency.py
info/tests/: tests_covid.py  (+1 more)
onlinestore/: settings.py  urls.py
store/: admin.py  permissions.py  urls.py
tools/: add_rnd.py  auto_fill_db.py  covid19.py  covid_test.py  image_store.py  json_test.py  notify.py  onliner_catalog.py  onliner_catalog_fix.py  onliner_catalog_old.py
users/: admin.py  forms.py
wallet/: admin.py
(+140 files in other folders)
